Combined note and editnote into one package. Reworked richtext to be part of note package.